--- a/main.css
+++ b/main.css
@@ -237,3 +237,17 @@ gap: 25px;
     display: flex;
     gap: 50px;
 }
+
+.imageBox {
+    width: 450px;
+    height: 400px;
+}
+
+.imageBox > img {
+    width: 100%;
+    height: 100%;
+}
+
+/* @media {
+    
+} */
