--- a/style.css
+++ b/style.css
@@ -31,29 +31,39 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    font-family: 'BetreaceDeckTrial', sans-serif;
+}
+
+html {
+    width: 100%;
+    height: 100%;
+}
+
+main {
+    width: 100%;
 }
 
 body {
-/* background-image: url(/WhatsApp\ Image\ 2024-10-17\ at\ 3.31.24\ PM.jpeg); */
-background-color: #e6e6e6;
-/* width: 1vw;
-height: 1vh; */
-/* margin: 50px;
-margin-top: 32px; */
-/* margin-left: 50px; */
-/* font-family: 'BetreaceDeckTrial', sans-serif; */
+    /* background-image: url(/WhatsApp\ Image\ 2024-10-17\ at\ 3.31.24\ PM.jpeg); */
+    background-color: #e6e6e6;
+    /* width: 1vw;
+    height: 1vh; */
+    /* margin: 50px;
+    margin-top: 32px; */
+    /* margin-left: 50px; */
+    /* font-family: 'BetreaceDeckTrial', sans-serif; */
 }
 
-.pageContainer{
-    padding: 35px;
-    width: 100vw;
+ .pageContainer{
+    padding: 40px;
+    width: 100%;
 }
 
 header{
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    font-family: 'BetreaceDeckTrial', sans-serif ;
-  
+    align-items: start;  
 }
 
 a {
@@ -62,55 +72,42 @@ a {
 
 .start {
     display: flex;
-    gap: 40px;
+    gap: 25px;
     
 }
 
 .links{
     display: flex;
-    gap: 30px;
+    gap: 25px;
     font-weight: 400;
-
 }
-
-/* .middle {
-background-color: aqua;
-} */
 
 .end {
-   display: flex; 
-   align-items: center;
-   justify-content: center;
-   gap: 60px;
-}
-
-.heart {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: black;
-    color: white;
-    /* padding: 15px; */
-    font-size: 16px;
-    display: flex;
+    display: flex; 
     align-items: center;
     justify-content: center;
-}
+    gap: 60px;
+ }
+ 
+ .heart {
+     width: 40px;
+     height: 40px;
+     border-radius: 50%;
+     background-color: black;
+     color: white;
+     /* padding: 15px; */
+     font-size: 16px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+ }
+ 
+ .cartcont {
+     display: flex;
+     align-items: center;
+ }
 
-.cartcont {
-    display: flex;
-    align-items: center;
-}
-/* .cart {
-    width: 70px;
-    height: 40px;
-    background-color: black;
-    border-radius: 20px;
-    text-align: center;
-    padding-top: 8px;
-} */
-
-.cart1 {
+ .cart1 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -146,7 +143,7 @@ background-color: aqua;
     font-size: px;
 }
 
-.box-1 {
+ .box-1 {
     display: flex;
     flex-direction: column;
     margin-top: 30px;
@@ -190,11 +187,12 @@ background-color: aqua;
     display: flex;
     gap: 20px;
     margin-top: 50px;
+    width: 100%;
 }
 
 .box-2 {
     width: 450px;
-    height: 400px;
+    height: 380px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -267,33 +265,37 @@ gap: 25px;
 }
 
 .imageBox {
-    width: 450px;
-    height: 400px;
+    width: auto;
+    height: auto;
 }
 
 .imageBox > img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+} 
+
+.mobileView {
+    display: none;
 }
 
-@media (max-width: 768px) {
-        /* Styles for tablets and smaller devices */
+.shop3 {
+    display: none;
+}
+@media (max-width: 820px) {
+    /* Styles for tablets and smaller devices */
 
-      .pageContainer{
+    .pageContainer{
         padding: 15px;
         width: 100%;
       }
 
       header {
         width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
       }
 
       .middle {
-        margin-left: 10px;
+        margin-left: 70px;
       }
 
       .middleImage {
@@ -307,7 +309,7 @@ gap: 25px;
         object-fit: cover;
       }
 
-      .navlinks, .heart, .cart1 {
+    .navlinks, .heart, .cart1 {
         display: none;
       }
 
@@ -316,7 +318,10 @@ gap: 25px;
         justify-content: space-around;
         gap: 6px;
       }
-      
+
+      .box-1 {
+        width: 100%;
+    }
       .inputCont{
         width: 100%;
       }
@@ -338,27 +343,70 @@ gap: 25px;
         flex-direction: column;
         width: 100%;
       }
-    .box-1 {
-        width: 100%;
-    }
+
 
       .box-2 {
         height: 250px;
         width: 100%;
       }
 
-      .shop{
+     .shop{
         display: none;
       }
 
       .img {
-        display: flex;
-        flex-direction: row;
-        width: 400px;
-        height: 100px;
-      }
-
-      .imageBox {
         display: none;
       }
-} 
+
+      .mobileView {
+        display: flex;
+        justify-content: space-around;
+        gap: 15px;
+      }
+
+      .img1 , .img2 {
+        display: flex;
+        flex-direction: column;
+
+      }
+
+      .img1 , .img2 > .imageBox {
+        width: auto;
+        height: auto;
+      }
+
+      .text > p {
+        font-size: 14px;
+        color: #54535390;
+      }
+
+      .itemInfo {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .itemInfo > p {
+        font-size: 16px;
+        font-weight:400;
+      }
+      
+      .shop3 {
+         margin-top: 30px;
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         width: 48%;
+         height: 50px;
+         background-color: #c4c3c390;
+         padding-left: 20px;
+         font-family: 'BetreaceDeckTrial', sans-serif ;;
+         font-weight: 500;
+      }
+}
+
+@media (min-width: 1295px) {
+    .imageBox {
+        width: 450px;
+        height: 380px;
+    }
+}
